--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
 		"/dist"
 	],
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "jest"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@types/chai": "^4.3.5",
-		"@types/mocha": "^10.0.1",
-		"chai": "^4.3.7",
-		"mocha": "^10.2.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.1.6"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.22.10",
+		"@babel/preset-env": "^7.22.10",
+		"@types/jest": "^29.5.3",
+		"babel-jest": "^29.6.2",
+		"jest": "^29.6.2",
+		"ts-jest": "^29.1.1"
 	}
 }
