--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"/dist"
 	],
 	"scripts": {
-		"test": "jest"
+		"test": "jest",
+		"build": "tsc"
 	},
 	"keywords": [],
 	"author": "",
@@ -24,5 +25,9 @@
 		"babel-jest": "^29.6.2",
 		"jest": "^29.6.2",
 		"ts-jest": "^29.1.1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/MikolajKawalec/physics-notation.git"
 	}
 }
