--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "physics-notation",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"files": [
-		"/dist"
+		"dist",
+		"src"
 	],
 	"scripts": {
 		"test": "jest",
