--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-	"name": "physics-notation",
-	"version": "1.0.4",
-	"description": "",
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
-	"files": [
-		"dist",
-		"src"
-	],
-	"scripts": {
-		"test": "jest",
-		"build": "tsc"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"ts-node": "^10.9.1",
-		"typescript": "^5.1.6"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.22.10",
-		"@babel/preset-env": "^7.22.10",
-		"@types/jest": "^29.5.3",
-		"babel-jest": "^29.6.2",
-		"jest": "^29.6.2",
-		"ts-jest": "^29.1.1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/MikolajKawalec/physics-notation.git"
-	}
+  "name": "physics-notation",
+  "version": "1.0.4",
+  "description": "",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "scripts": {
+    "test": "jest",
+    "build": "tsc",
+    "prettier": "npx prettier --write \"src/**/*.ts\" \"src/**/*.test.ts\""
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "@types/jest": "^29.5.3",
+    "babel-jest": "^29.6.2",
+    "jest": "^29.6.2",
+    "prettier": "3.2.4",
+    "ts-jest": "^29.1.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MikolajKawalec/physics-notation.git"
+  }
 }
